@@ -4018,4 +4018,7 @@
   abc
   abc\n  
 
+/(.*(.)?)*/
+    abcd
+
 / End of testinput1 /
